--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server ./rawData.json -p 4001"
+    "server": "json-server --watch ./rawData.json -p 4001"
   },
   "dependencies": {
     "react": "18.2.0",
